Changes from Version 0.13.7 to 0.13.8 [30-Jan-2011]

* cv now default, increased basis.maxdim to 10

* segments and degree hit different maxima (basis.maxdim+1,
  basis.maxdim) but `degree equal to basis.maxdim' warning was only
  being issued when equal to basis.maxdim

* restarts was not being passed to krscv

Changes from Version 0.13.6 to 0.13.7 [9-Dec-2010]

* added option to choose both degree and knots independently for each
  predictor and (more importantly) cross-validate both

Changes from Version 0.13.5 to 0.13.6 [8-Dec-2010]

* added option to use either uniform knots (equally spaced segments)
  or quantile knots (equal number of observations in each segment)

Changes from Version 0.13.4 to 0.13.5 [17-Apr-2010]

* changed package and function names to `crs' as Lijian strictly
  prefers `regression spline' to `smoothing spline' (The major
  difference is to place knots on sample points (smoothing spline,
  Wahba) or on equidistant deterministic points (B spline, Stone))

Changes from Version 0.13.3 to 0.13.4 [07-Apr-2010]

* fixed annoying "Working... Working" in plot (message produced by
  predict.*.spline sufficient here)

* added option for L1 CV (incomplete as properly this would require L1
  estimation as well)

* neglected to set cv and cv.pruned when degree is zero (fixed)

* adjusted R-squared corrected

Changes from Version 0.13.2 to 0.13.3 [28-Mar-2010]

* had to revamp derivative code to support pruning by taking out the
  reordering prior to derivative estimation - new approach is more
  natural with less issues. Examples all pass with flying colors

* had to modify the add1.lm function (modified version is add1.lm.cv)
  to flesh out stepCV

Changes from Version 0.13.1 to 0.13.2 [28-Mar-2010]

* modified stepAIC code from the MASS package to admit the
  cross-validation objective function, renamed to stepCV to not
  clobber users using stepAIC - this is a three line addition of the