@@ -1,6 +1,6 @@
 Package: crs
-Version: 0.13-9
-Date: 2011-02-20
+Version: 0.14-0
+Date: 2011-04-12
 Depends: mgcv
 Suggests: np
 Title: Categorical Regression Splines
