@@ -1,3 +1,7 @@
+Changes from Version 0.13.8 to 0.14.0 [12-Apr-2011]
+
+* trying intercept=TRUE and no constant in model (throughout)
+
 Changes from Version 0.13.7 to 0.13.8 [30-Jan-2011]
 
 * cv now default, increased basis.maxdim to 10
